You need to sign in or sign up before continuing.
dtlsdec: Critical warnings in gst-inspect
@slomo
Submitted by Sebastian Dröge Link to original bug (#797364)
Description
** (gst-inspect-1.0:23460): CRITICAL **: 23:38:49.968: file gstdtlsagent.c: line 188 (gst_dtls_agent_init): should not be reached
** (gst-inspect-1.0:23460): CRITICAL **: 23:38:49.968: gst_dtls_agent_set_property: assertion 'self->priv->ssl_context' failed
[...]
** (gst-inspect-1.0:23460): CRITICAL **: 23:38:49.968: gst_dtls_agent_get_certificate_pem: assertion 'GST_IS_DTLS_CERTIFICATE (self->priv->certificate)' failed